--- a/src/static/css/login.css
+++ b/src/static/css/login.css
@@ -1,87 +1,94 @@
-body{
-    background-image: url('../../media1/log-b.jpg');
-    background-repeat: no-repeat;
-    background-size: cover; /* or contain */
-}
+/* login.css */
 
-.log-in-container{
-    position: absolute;
-    top: 100px;
-    left: 680px;
-    width: 600px;
-    height: 700px;
-    border-radius: 30px;
-    background-color: aliceblue;
-}
-
-.log-in-text{
-    position: absolute;
-    top: 100px;
-    left: 150px;
-    font-size: 30px;
-    font-weight: bold;
-}
-
-.label-email{
-    position: relative;
-    top: -50px;
-    left: -40px;
-}
-
-.input-email{
-    position: relative;
-    top: 250px;
-    left: -32px;
-    border-width: 1px;
-    border-color: black;
-    border-radius: 10px;
-}
-
-.label-password{
-    position: relative;
-    top: 250px;
-    left: 90px;
-}
-
-.input-password{
-    position: relative;
-    top: 300px;
-    left: -4px;
-    border-width: 1px;
-    border-color: black;
-    border-radius: 10px;
-}
-
-.log-in-form{
-    position: relative;
-    width: 350px;
-    height: 60px;
-    background-color: black;
-    top: 340px;
-    left: 120px;
-    border-radius: 20px;
-    color:white
-}
-
-.log-in-form:hover{
+.log-in-container {
+    max-width: 400px;
+    margin: 2rem auto;
+    padding: 2rem;
     background-color: white;
-    transition-duration: 0.5s;
-    border-color: black;
-    border-width: 1px;
-    color:black
-}
-
-.register-button{
-    position: relative;
-    top:390px;
-    left:-150px;
-    font-size:16px;
-    color:blue;
-}
-
-
-.form-class{
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  }
+  
+  .log-in-text {
+    font-size: 2rem;
+    font-weight: bold;
+    text-align: center;
+    margin-bottom: 1.5rem;
+    color: black;
+  }
+  
+  .form-class {
+    display: flex;
+    flex-direction: column;
     position: absolute;
-    left: -100px;
-}   
+    left: 700px;
+  }
+  
+  .form-fieldset {
+    border: none;
+    padding: 0;
+    margin: 0;
+  }
+  
+  .label-email,
+  .label-password {
+    display: block;
+    margin-bottom: 0.5rem;
+    font-weight: bold;
+    color: black;
+  }
+  
+  .input-email,
+  .input-password {
+    width: 100%;
+    padding: 0.75rem;
+    margin-bottom: 1rem;
+    border: 1px solid black;
+    border-radius: 4px;
+    font-size: 1rem;
+  }
+  
+  .input-email:focus,
+  .input-password:focus {
+    outline: none;
+    border-color: #666;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+  }
+  
+  .log-in-form {
+    width: 100%;
+    padding: 0.75rem;
+    background-color: black;
+    color: white;
+    border: none;
+    border-radius: 4px;
+    font-size: 1rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+  }
+  
+  .log-in-form:hover {
+    background-color: #333;
+  }
 
+  .register-button{
+    position: absolute;
+    color:#303ab2;
+    top:600px;
+    left:900px;
+  }
+
+  .link-text-login{
+    color:#303ab2;
+    text-decoration: underline;
+  }
+  
+  /* Responsive design */
+  @media (max-width: 480px) {
+    .log-in-container {
+      max-width: 100%;
+      margin: 1rem;
+      padding: 1rem;
+    }
+  }
+
+  
