--- a/src/static/css/roominfo.css
+++ b/src/static/css/roominfo.css
@@ -250,3 +250,17 @@
     top: 600px;
     left: -110px;
 }
+
+.profilepic{
+    position: relative;
+    width: 50px;
+    height: 50px;
+    top: 30px;
+}
+
+.feature{
+    position: relative;
+    top: -40px;
+    left: 65px;
+    
+}
