--- a/src/static/css/index1.css
+++ b/src/static/css/index1.css
@@ -400,37 +400,13 @@ select{
 
 
 .rooti-button img {
-    width: 45px;
-    height: 45px;
+    width: 100%;
+    height: 100%;
     position: relative;
     
 }
 
-.rooti-button:nth-of-type(2) img{
 
-    width: 50px;
-    height: 50px;
-}
-
-.rooti-button:nth-of-type(3) img{
-    
-    width: 40px;
-    height: 40px;
-}
-
-.rooti-button:nth-of-type(4) img{
-    width: 50px;
-    height: 50px;
-}
-
-.rooti-button p{
-    position: relative;
-    left:25px;
-    top: 8px;
-    font-weight: bold;
-    color:white;
-    
-}
 
 .rooti-button:hover{
     transition-duration: 0.5s;
