--- a/src/static/css/index1.css
+++ b/src/static/css/index1.css
@@ -352,7 +352,7 @@ select{
     justify-content: space-around;
     display: flex;
     top: 0px;
-    width: 100%;
+    width: 1920px;
     height: 400px;
     color: #FFF8DC
 }
