--- a/src/static/css/index1.css
+++ b/src/static/css/index1.css
@@ -5,7 +5,7 @@
 
 .top-container{
     position:absolute;
-    width: 1920;
+    width: 1920px;
     height:450px;
     background-color:#303ab2;
 }
