--- a/src/static/css/index1.css
+++ b/src/static/css/index1.css
@@ -334,7 +334,7 @@ select{
 .about-us{
     position: absolute;
     top: 2900px;
-    width: 100%;
+    width: 1920px;
     height: 400px;
     background-color: #303ab2;
 }
