--- a/src/static/css/index1.css
+++ b/src/static/css/index1.css
@@ -332,7 +332,7 @@ select{
 }
 
 .about-us{
-    position: absolute;
+    position: relative;
     top: 2900px;
     width: 1920px;
     height: 400px;
